Fixed big gap on left when window is ~1280px wide.

--- a/twoguys.css
+++ b/twoguys.css
@@ -2,7 +2,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: auto;
   position: relative;
-  width: 960px;
+  width: 100%;
 }
  
 .axis path,
